--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -1,12 +1,9 @@
 ---
 layout: layout
 ---
-
-<%= partial 'partials/site_nav' %>
-
 <header class="site-hero" role="banner">
   <div class="container">
-    <%= partial 'partials/middleman_logo' %>
+    <%= partial "partials/middleman_logo" %>
     <h2 class="site-hero-tagline"><%= t("index.tagline") %></h2>
     <h3 class="site-hero-description"><%= t("index.description") %></h3>
     <!-- <pre class="">
