--- a/source/partials/_site_footer.erb
+++ b/source/partials/_site_footer.erb
@@ -16,7 +16,7 @@
     <%= link_to t("built.github"), "//github.com/middleman/middleman" %>
 
     <p class="">Site proudly designed by</p>
-    <%= partial 'partials/thoughtbot_logo' %>
+    <%= partial "partials/thoughtbot_logo" %>
 
   </div>
 </footer>
