--- a/source/partials/_site_nav.erb
+++ b/source/partials/_site_nav.erb
@@ -3,7 +3,7 @@
     <%= link_to t("title"), "#{locale_prefix}/", class: "site-title" %>
     <ol class="site-nav-list">
       <li class="site-nav-item">
-        <%= link_to t("navigation.contribute"),
+        <%= link_to t("navigation.community"),
           "#{locale_prefix}/community/" %>
       </li>
       <li class="site-nav-item">
