--- a/source/stylesheets/patterns/_site-footer.scss
+++ b/source/stylesheets/patterns/_site-footer.scss
@@ -1,4 +1,5 @@
 .site-footer {
   @include padding(null $base-spacing);
   background-color: $secondary-background-color;
+  margin-top: $base-spacing * 4;
 }
