--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag "site" %>
   </head>
   <body>
+    <%= partial "partials/site_nav" %>
     <%= yield %>
     <%= partial "partials/site_footer" %>
     <%= javascript_include_tag :site %>
