--- a/source/localizable/community/index.html.erb
+++ b/source/localizable/community/index.html.erb
@@ -1,12 +1,10 @@
 ---
 layout: layout
+title: Community
 ---
-
-<%= partial 'partials/site_nav' %>
-
 <header>
   <div class="container">
-    <%= partial 'partials/icons/icon_community' %>
+    <%= partial "partials/icons/icon_community" %>
     <h1>
       <%= t("community.title") %>
     </h1>
@@ -28,7 +26,7 @@ layout: layout
 
       <ul>
         <li>
-          <%= partial 'partials/icons/icon_extensions' %>
+          <%= partial "partials/icons/icon_extensions" %>
           <h3>
             <%= t("contributions.extensions.header") %>
           </h3>
@@ -38,7 +36,7 @@ layout: layout
           <%= link_to t("contributions.extensions.link_text"), "//directory.middlemanapp.com/#/extensions/all", class: "button" %>
         </li>
         <li>
-          <%= partial 'partials/icons/icon_project_templates' %>
+          <%= partial "partials/icons/icon_project_templates" %>
           <h3>
             <%= t("contributions.templates.header") %>
             </h3>
@@ -48,7 +46,7 @@ layout: layout
           <%= link_to t("contributions.templates.link_text"), "//directory.middlemanapp.com/#/templates/all", class: "button" %>
         </li>
         <li>
-          <%= partial 'partials/icons/icon_deployment_solutions' %>
+          <%= partial "partials/icons/icon_deployment_solutions" %>
           <h3>
             <%= t("contributions.deployment.header") %>
           </h3>
