--- a/source/partials/_docs_nav.erb
+++ b/source/partials/_docs_nav.erb
@@ -1,108 +1,110 @@
-<%= partial "partials/docs_search" %>
-<div class="toc-block-container">
-  <div class="toc-block">
-    <h3 class="docs-section-heading"><%= t("navigation.basics.title") %></h3>
-    <ul>
-      <li class="doc-item">
-        <%= active_link_to  t("navigation.basics.install"), "#{locale_prefix}/basics/install/"%> </li>
-      <li class="doc-item">
-        <%= active_link_to  t("navigation.basics.upgrade-v4"), "#{locale_prefix}/basics/upgrade-v4/"%> </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.basics.start_new_site"), "#{locale_prefix}/basics/start_new_site/" %>
+<nav class="docs-nav" role="navigation">
+
+  <div class="docs-nav-section">
+    <h2 class="docs-nav-heading"><%= t("navigation.basics.title") %></h2>
+    <ol class="docs-nav-list">
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.basics.install"),
+          "#{locale_prefix}/basics/install/"%>
       </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.basics.directory_structure"), "#{locale_prefix}/basics/directory-structure/" %>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.basics.upgrade-v4"),
+          "#{locale_prefix}/basics/upgrade-v4/"%> </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.basics.start_new_site"),
+          "#{locale_prefix}/basics/start_new_site/" %>
       </li>
-      <li class="doc-item" >
-        <%= active_link_to t("navigation.basics.development_cycle"), "#{locale_prefix}/basics/development_cycle/" %>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.basics.directory_structure"),
+          "#{locale_prefix}/basics/directory-structure/" %>
       </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.basics.build_deploy"), "#{locale_prefix}/basics/build_and_deploy/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.basics.frontmatter"), "#{locale_prefix}/basics/frontmatter/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.basics.templates"), "#{locale_prefix}/basics/templating_language/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.basics.helper_methods"), "#{locale_prefix}/basics/helper_methods/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.basics.layouts"), "#{locale_prefix}/basics/layouts/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.basics.partials"), "#{locale_prefix}/basics/partials/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.basics.blogging"), "#{locale_prefix}/basics/blogging/" %>
-        </li>
-    </ul>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.basics.development_cycle"),
+          "#{locale_prefix}/basics/development_cycle/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.basics.build_deploy"),
+          "#{locale_prefix}/basics/build_and_deploy/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.basics.frontmatter"),
+          "#{locale_prefix}/basics/frontmatter/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.basics.templates"),
+          "#{locale_prefix}/basics/templating_language/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.basics.helper_methods"),
+          "#{locale_prefix}/basics/helper_methods/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.basics.layouts"),
+          "#{locale_prefix}/basics/layouts/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.basics.partials"),
+          "#{locale_prefix}/basics/partials/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.basics.blogging"),
+          "#{locale_prefix}/basics/blogging/" %>
+      </li>
+    </ol>
   </div>
 
-  <div class="toc-block">
-    <h3 class="docs-section-heading"><%= t("navigation.advanced.title") %></h3>
-    <ul>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.configuration"), "#{locale_prefix}/advanced/configuration/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.project_templates"), "#{locale_prefix}/advanced/project_templates/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.dynamic_pages"), "#{locale_prefix}/advanced/dynamic_pages/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.data_files"), "#{locale_prefix}/advanced/data_files/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.localization"), "#{locale_prefix}/advanced/localization/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.asset_pipeline"), "#{locale_prefix}/advanced/asset_pipeline/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.rack_middleware"), "#{locale_prefix}/advanced/rack_middleware/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.sitemap"), "#{locale_prefix}/advanced/sitemap/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.pretty_urls"), "#{locale_prefix}/advanced/pretty_urls/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.improving_cacheability"), "#{locale_prefix}/advanced/improving_cacheability/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.file_size_optimization"), "#{locale_prefix}/advanced/file_size_optimization/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.custom_extensions"), "#{locale_prefix}/advanced/custom_extensions/" %>
-        </li>
-    </ul>
+  <div class="docs-nav-section">
+    <h2 class="docs-nav-heading"><%= t("navigation.advanced.title") %></h2>
+    <ol class="docs-nav-list">
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.advanced.configuration"),
+          "#{locale_prefix}/advanced/configuration/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.advanced.project_templates"),
+          "#{locale_prefix}/advanced/project_templates/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.advanced.dynamic_pages"),
+          "#{locale_prefix}/advanced/dynamic_pages/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.advanced.data_files"),
+          "#{locale_prefix}/advanced/data_files/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.advanced.localization"),
+          "#{locale_prefix}/advanced/localization/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.advanced.asset_pipeline"),
+          "#{locale_prefix}/advanced/asset_pipeline/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.advanced.rack_middleware"),
+          "#{locale_prefix}/advanced/rack_middleware/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.advanced.sitemap"),
+          "#{locale_prefix}/advanced/sitemap/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.advanced.pretty_urls"),
+          "#{locale_prefix}/advanced/pretty_urls/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.advanced.improving_cacheability"),
+          "#{locale_prefix}/advanced/improving_cacheability/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.advanced.file_size_optimization"),
+          "#{locale_prefix}/advanced/file_size_optimization/" %>
+      </li>
+      <li class="docs-nav-item">
+        <%= active_link_to t("navigation.advanced.custom_extensions"),
+          "#{locale_prefix}/advanced/custom_extensions/" %>
+      </li>
+    </ol>
   </div>
 
-  <div class="toc-block">
-    <h3 class="docs-section-heading"><%= t("navigation.community.title") %></h3>
-    <ul>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.community.custom_extensions"), "https://directory.middlemanapp.com/#/extensions/all/" %>
-      </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.community.project_templates"), "https://directory.middlemanapp.com/#/templates/all/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.community.deployment_solution"), "https://directory.middlemanapp.com/#/extensions/deployment/" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.community.community_forum"), "https://forum.middlemanapp.com/", target: "_blank"%>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.community.github"), "https://github.com/middleman/middleman", target: "_blank" %>
-        </li>
-      <li class="doc-item">
-        <%= active_link_to t("navigation.community.built_using_middleman"), "#{locale_prefix}/community/built_using_middleman/" %>
-        </li>
-    </ul>
-  </div>
-</div>
+</nav>
