--- a/source/stylesheets/base/_grid-settings.scss
+++ b/source/stylesheets/base/_grid-settings.scss
@@ -1,10 +1,11 @@
 @import "neat-helpers";
 
-$gutter: 1.5em;
-$max-width: 50em;
+$gutter: modular-scale(1);
+$max-width: 52em;
 
 $medium-screen: 40em;
 $large-screen: 60em;
+$extra-large-screen: 100em;
 
 $medium-screen-up: new-breakpoint(min-width $medium-screen 4);
 $large-screen-up: new-breakpoint(min-width $large-screen 8);
