Initial layout for site footer

--- a/source/partials/_site_footer.erb
+++ b/source/partials/_site_footer.erb
@@ -5,17 +5,17 @@
       &copy; 2011&ndash;<%= Date.today.year %> <%= link_to "Thomas Reynolds", "//awardwinningfjords.com" %>
     </p>
 
-    <p class="">
+    <p>
       Maintained by the <%= link_to "core team",
         "//github.com/orgs/middleman/people" %> with help from
         <%= link_to "contributors",
           "//github.com/middleman/middleman/graphs/contributors" %>.
     </p>
 
-    <%= link_to t("built.twitter"), "//twitter.com/middlemanapp" %>
-    <%= link_to t("built.github"), "//github.com/middleman/middleman" %>
+    <%= link_to "Twitter", "//twitter.com/middlemanapp" %>
+    <%= link_to "GitHub", "//github.com/middleman/middleman" %>
 
-    <p class="">Site proudly designed by</p>
+    <p class="site-design-credit">Site proudly designed by</p>
     <%= partial "partials/thoughtbot_logo" %>
 
   </div>
