--- a/source/partials/_docs_nav.erb
+++ b/source/partials/_docs_nav.erb
@@ -8,7 +8,7 @@
           "#{locale_prefix}/basics/install/"%>
       </li>
       <li class="docs-nav-item">
-        <%= active_link_to t("navigation.basics.upgrade-v4"),
+        <%= active_link_to t("navigation.basics.upgrade_v4"),
           "#{locale_prefix}/basics/upgrade-v4/"%> </li>
       <li class="docs-nav-item">
         <%= active_link_to t("navigation.basics.start_new_site"),
