--- a/source/partials/_made_with_site.erb
+++ b/source/partials/_made_with_site.erb
@@ -1,6 +1,7 @@
 <li>
   <%= link_to site.title || site.url, site.url %>
   <% if site.source %>
-    <%= link_to t("built.source_code"), site.source %>
+    <%= link_to t("made_with.source"), site.source,
+      class: "site-source" %>
   <% end %>
 </li>
