--- a/source/stylesheets/patterns/_patterns.scss
+++ b/source/stylesheets/patterns/_patterns.scss
@@ -1,5 +1,6 @@
 @import "container";
 @import "docs-nav";
+@import "screen-main";
 @import "site-footer";
 @import "site-hero";
 @import "site-nav";
