--- a/source/stylesheets/modules/_footer.scss
+++ b/source/stylesheets/modules/_footer.scss
@@ -79,10 +79,10 @@
   }
 }
 
-.footer-thoughtbot-logo {
+.footer-formkeep-logo {
   @include size(em(200) em(71));
   display: inline-block;
-  background-image: inline-image('thoughtbot-logo.svg');
+  background-image: inline-image('formkeep-logo.svg');
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
