Added funio.com to compagnies using middleman and built with page

--- a/source/partials/_logos.html.erb
+++ b/source/partials/_logos.html.erb
@@ -14,6 +14,9 @@
         <li>
           <%= image_tag("/images/thoughtbot_logo.png", alt: "thoughtbot")%>
         </li>
+        <li>
+          <%= image_tag("/images/funio_logo.png", alt: "funio")%>
+        </li>
       </ul>
       <ul class="centered-content">
         <li class="community-social-link-item">
