--- a/source/localizable/community.html.erb
+++ b/source/localizable/community.html.erb
@@ -65,7 +65,7 @@ layout: layout
             </h5>
             <p><%= t("contributions.deployment.description") %></p>
             <%= link_to t("contributions.deployment.link_text"),
-              "https://directory.middlemanapp.com/#/deployment/all", class: "cta-link-body" %>
+              "https://directory.middlemanapp.com/#/extensions/deployment", class: "cta-link-body" %>
           </div>
         </div>
       </article>
