--- a/source/stylesheets/modules/_documentation-nav.scss
+++ b/source/stylesheets/modules/_documentation-nav.scss
@@ -17,7 +17,9 @@
   @include fill-parent;
   border: 1px solid $mm-slate-gray;
   margin-bottom: 0;
-  padding: 1em 1.9em;
+  height: $base-font-size*2;
+  padding: 0 1.9em;
+  line-height: $base-font-size*2;
 
   &:focus,
   &:hover {
