Correct .source-code-link positioning from #511

--- a/source/stylesheets/modules/_built-with-middleman.scss
+++ b/source/stylesheets/modules/_built-with-middleman.scss
@@ -39,7 +39,7 @@
   border: 1px solid $base-border-color;
   color: lighten($medium-gray, 10);
   position: absolute;
-  right: 3em;
+  right: 26px;
   font-size: $base-font-size * 0.75;
   font-weight: $font-weight-bold;
   line-height: 30px;
