Fix stretched FormKeep logo in Firefox

--- a/source/stylesheets/modules/_footer.scss
+++ b/source/stylesheets/modules/_footer.scss
@@ -84,5 +84,5 @@
   display: inline-block;
   background-image: url('/images/formkeep-logo.svg');
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: 100%;
 }
