Add redirect docs. Closes #284

--- a/source/partials/_documentation_nav.erb
+++ b/source/partials/_documentation_nav.erb
@@ -35,6 +35,8 @@
         <%= active_link_to t("navigation.basics.partials"), "#{locale_prefix}/basics/partials/" %>
         </li>
       <li class="doc-item">
+        <%= active_link_to  t("navigation.basics.redirects"), "#{locale_prefix}/basics/redirects/"%> </li>
+      <li class="doc-item">
         <%= active_link_to t("navigation.basics.blogging"), "#{locale_prefix}/basics/blogging/" %>
         </li>
     </ul>
