Document templates. Closes #261

--- a/source/partials/_documentation_nav.erb
+++ b/source/partials/_documentation_nav.erb
@@ -81,6 +81,9 @@
       <li class="doc-item">
         <%= active_link_to t("navigation.advanced.custom_extensions"), "#{locale_prefix}/advanced/custom_extensions/" %>
         </li>
+      <li class="doc-item">
+        <%= active_link_to t("navigation.advanced.custom_templates"), "#{locale_prefix}/advanced/custom-templates/" %>
+        </li>
     </ul>
   </div>
 
