--- a/source/partials/_documentation_nav.erb
+++ b/source/partials/_documentation_nav.erb
@@ -4,9 +4,9 @@
     <h3 class="docs-section-heading"><%= t("navigation.basics.title") %></h3>
     <ul>
       <li class="doc-item">
-        <%= active_link_to  t("navigation.basics.install"), "#{locale_prefix}/basics/install/"%> </li>
+        <%= active_link_to t("navigation.basics.install"), "#{locale_prefix}/basics/install/"%> </li>
       <li class="doc-item">
-        <%= active_link_to  t("navigation.basics.upgrade-v4"), "#{locale_prefix}/basics/upgrade-v4/"%> </li>
+        <%= active_link_to t("navigation.basics.upgrade-v4"), "#{locale_prefix}/basics/upgrade-v4/"%> </li>
       <li class="doc-item">
         <%= active_link_to t("navigation.basics.start_new_site"), "#{locale_prefix}/basics/start_new_site/" %>
       </li>
@@ -35,7 +35,7 @@
         <%= active_link_to t("navigation.basics.partials"), "#{locale_prefix}/basics/partials/" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to  t("navigation.basics.redirects"), "#{locale_prefix}/basics/redirects/"%> </li>
+        <%= active_link_to t("navigation.basics.redirects"), "#{locale_prefix}/basics/redirects/"%> </li>
       <li class="doc-item">
         <%= active_link_to t("navigation.basics.blogging"), "#{locale_prefix}/basics/blogging/" %>
         </li>
@@ -62,6 +62,9 @@
         </li>
       <li class="doc-item">
         <%= active_link_to t("navigation.advanced.asset_pipeline"), "#{locale_prefix}/advanced/asset_pipeline/" %>
+        </li>
+      <li class="doc-item">
+        <%= active_link_to t("navigation.advanced.external_pipeline"), "#{locale_prefix}/advanced/external-pipeline/" %>
         </li>
       <li class="doc-item">
         <%= active_link_to t("navigation.advanced.rack_middleware"), "#{locale_prefix}/advanced/rack_middleware/" %>
