replace asset pipeline

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -12,8 +12,8 @@ layout: layout
 
     <div class="hero-banner-container">
       <div class="browser">
-        <pre class="browser-body">
-          <code class="browser-code">$ gem install middleman</code>
+        <pre class="browser-body no-highlight">
+          <code class="browser-code"><span class="variable">$</span> <span class="identifier">gem install middleman</span></code>
         </pre>
       </div>
     </div>
@@ -26,8 +26,8 @@ layout: layout
       <div class="introduction-item second-graphic">
         <div class="introduction-item-graphic-wrapper">
           <div class="introduction-browser browser">
-            <pre class="introduction-browser-body browser-body">
-              <code class="browser-code">$ middleman init project</code>
+            <pre class="introduction-browser-body browser-body no-highlight">
+              <code class="browser-code"><span class="variable">$</span> <span class="identifier">middleman init project</span></code>
             </pre>
           </div>
         </div>
