--- a/source/stylesheets/modules/_browser.scss
+++ b/source/stylesheets/modules/_browser.scss
@@ -22,6 +22,11 @@
   background: $browser-body-color;
   margin: 0;
   padding: 0;
+  display: block;
+
+  .variable {
+    color: #b58900;
+  }
 
   .identifier {
     color: white;
