--- a/source/partials/_global_nav.erb
+++ b/source/partials/_global_nav.erb
@@ -9,6 +9,10 @@
 
     <ul class="global-nav-list">
       <li class="global-nav-item">
+        <%= link_to t("navigation.support"),
+          "#{locale_prefix}/support/" %>
+      </li>
+      <li class="global-nav-item">
         <%= link_to t("navigation.contribute"),
           "#{locale_prefix}/community/" %>
       </li>
