Add version badge

--- a/source/stylesheets/modules/landing/_hero.scss
+++ b/source/stylesheets/modules/landing/_hero.scss
@@ -47,5 +47,11 @@
       @include span-columns(8 of 12);
       @include shift(2);
     }
+
+    .badge {
+      position: absolute;
+      bottom: 0.75em;
+      right: 1em;
+    }
   }
 }
