--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -15,6 +15,7 @@ layout: layout
         <pre class="browser-body no-highlight">
           <code class="browser-code"><span class="variable">$</span> <span class="identifier">gem install middleman</span></code>
         </pre>
+        <a class="badge" href="https://badge.fury.io/rb/middleman" target="_blank"><img src="https://badge.fury.io/rb/middleman.svg" alt="Gem Version" height="18"></a>
       </div>
     </div>
   </section>
