--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -5,7 +5,7 @@ layout: layout
 <header class="hero" role="banner">
   <%= partial 'partials/global_nav' %>
   <section class="body-content-container wrap-container" data-waypoint="hero-content">
-    <%= link_to image_tag("middleman-logo.svg"), "#{locale_prefix}/",
+    <%= link_to image_tag("middleman_logo.svg"), "#{locale_prefix}/",
       class: "hero-content-logo" %>
     <h2 class="hero-headline"><%= t("index.headline") %></h2>
     <h3 class="hero-description"><%= t("index.description") %></h3>
