Use system fonts
By switching to system fonts we maintain a similar look and feel, while
eliminating the need for loading external resources: fonts from Google.

The font stack comes from https://github.com/mrmrs/css-system-fonts.

Note that Bourbon v5 will ship with a `$font-stack-system` variable, so
this long list can be wrapped up simply as
`font-family: $font-stack-system;` once we upgrade from v4.

--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -2,8 +2,11 @@
 @include disable-prefix-for-all;
 
 // Typography
-$sans-serif: "Lato", $helvetica;
-$monospace-font-family: "Source Code Pro", $monospace;
+$sans-serif: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
+  "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
+  "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
+  "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
+$monospace-font-family: "Consolas", "monaco", monospace;
 
 $base-font-family: $sans-serif;
 $header-font-family: $base-font-family;
