Use middleman-syntax extension
- Shows off usage of Middleman extensions
- The highlighting will happen before compilation, reducing load on the
front-end in the browser

The Solarized Light theme comes from
https://gist.github.com/nicolashery/5765395.

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -12,7 +12,7 @@ layout: layout
 
     <div class="hero-banner-container">
       <div class="browser">
-        <pre class="browser-body no-highlight">
+        <pre class="browser-body">
           <code class="browser-code"><span class="variable">$</span> <span class="identifier">gem install middleman</span></code>
         </pre>
         <a class="badge" href="https://badge.fury.io/rb/middleman" target="_blank"><img src="https://badge.fury.io/rb/middleman.svg" alt="Gem Version" height="18"></a>
@@ -27,7 +27,7 @@ layout: layout
       <div class="introduction-item second-graphic">
         <div class="introduction-item-graphic-wrapper">
           <div class="introduction-browser browser">
-            <pre class="introduction-browser-body browser-body no-highlight">
+            <pre class="introduction-browser-body browser-body">
               <code class="browser-code"><span class="variable">$</span> <span class="identifier">middleman init project</span></code>
             </pre>
           </div>
