--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -6,6 +6,7 @@
 @import "neat";
 @import "base/base";
 
+@import "solarized-light";
+
 @import "mixins/button";
 @import "modules/modules";
-@import "solarized_light.css";
