--- a/source/partials/_global_nav.erb
+++ b/source/partials/_global_nav.erb
@@ -1,7 +1,7 @@
 <nav class="global-nav" role="navigation">
   <section class="wrap-container">
     <header class="global-nav-item logo-text">
-      <%= link_to t("navigation.logo"), "#{locale_prefix}/", class:
+      <%= link_to t("global_navigation.logo"), "#{locale_prefix}/", class:
         "global-nav-middleman-signature" %>
       <%= link_to image_tag("middleman-logo.svg"), "#{locale_prefix}/", class:
         "global-nav-middleman-logo" %>
@@ -11,15 +11,15 @@
 
     <ul class="global-nav-list">
       <li class="global-nav-item">
-        <%= link_to t("navigation.support"),
+        <%= link_to t("global_navigation.support"),
           "#{locale_prefix}/support/" %>
       </li>
       <li class="global-nav-item">
-        <%= link_to t("navigation.contribute"),
+        <%= link_to t("global_navigation.community"),
           "#{locale_prefix}/community/" %>
       </li>
       <li class="global-nav-item">
-        <%= link_to t("navigation.docs"),
+        <%= link_to t("global_navigation.docs"),
           "#{locale_prefix}/basics/install/", class: "cta-link-nav" %>
       </li>
     </ul>
