--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -39,7 +39,7 @@ $dark-gray: #4a4e56;
 $medium-gray: #999;
 
 // Middleman colors
-$mm-yellow: #f3c859;
+$mm-yellow: #fbc547;
 $mm-navy: #446184;
 $mm-slate-gray: #8990a1;
 $mm-light-gray: #c0c0c0;
