--- a/source/localizable/thank-you/index.html.erb
+++ b/source/localizable/thank-you/index.html.erb
@@ -1,6 +1,14 @@
-<h1>Thank You!</h1>
+---
+layout: layout
+---
 
-<p>
-  Your support is greatly appreciated and helps the team pay for the hosting of
-  this documentation website, the forums and other related costs.
-</p>
+<%= partial 'partials/global_nav' %>
+
+<div class="wrap-container body-content-container">
+  <h1>Thank You!</h1>
+
+  <p>
+    Your support is greatly appreciated and helps the team pay for the hosting of
+    this documentation website, the forums and other related costs.
+  </p>
+</div>
