Move footer partial to partials directory

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,7 +9,7 @@
   </head>
   <body>
     <%= yield %>
-    <%= partial "localizable/footer" %>
+    <%= partial "partials/footer" %>
     <%= javascript_include_tag :site %>
     <%= partial "partials/tracking" %>
   </body>
