Move docsearch Sass to modules

--- a/source/stylesheets/modules/_modules.scss
+++ b/source/stylesheets/modules/_modules.scss
@@ -6,6 +6,7 @@
 @import "browser";
 @import "community";
 @import "footer";
+@import "docsearch/main";
 
 @import "landing/hero";
 @import "landing/introduction";
