Move doc search out of global nav

--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -3,6 +3,10 @@
     <%= partial 'partials/global_nav' %>
   </header>
 
+  <div class="search">
+    <%= partial "partials/docsearch" %>
+  </div>
+
   <div class="body-content-container wrap-container" role="main">
     <nav id="toc" class="sidebar" data-waypoint="sidebar">
       <%= partial 'partials/documentation_nav' %>
