--- a/source/stylesheets/modules/docsearch/_variables.scss
+++ b/source/stylesheets/modules/docsearch/_variables.scss
@@ -9,11 +9,11 @@ $searchbox-config: (
   input-background: transparent,
   input-focus-background: transparent,
   font-size: 16px,
-  placeholder-color: rgba(255, 255, 255, 0.9),
+  placeholder-color: $base-font-color,
   icon: 'sbx-icon-search-21',
   icon-size: 18px,
   icon-position: left,
-  icon-color: white,
+  icon-color: #000,
   icon-background: #458EE1,
   icon-background-opacity: 0,
   icon-clear: 'sbx-icon-clear-1',
