Update logos of companies using Middleman
- Swap PNG images for SVG
- Replace Basho with Vox Media
- Replace Funio with Nest
- Swap "Company" for "People"

--- a/source/stylesheets/modules/_community.scss
+++ b/source/stylesheets/modules/_community.scss
@@ -118,11 +118,9 @@
 }
 
 .logo-block li {
-  padding: 2em;
   display: inline-block;
 }
 
 .logo-block img {
-  height: 50px;
-  opacity: 0.2;
+  width: 200px;
 }
