--- a/source/partials/_logos.erb
+++ b/source/partials/_logos.erb
@@ -3,28 +3,25 @@
     <h4 class="contributions-title centered-content">
       <%= t("community.built_using_middleman") %>
     </h4>
-    <article class="logo-block">
+
+    <div class="logo-block">
       <ul>
         <li>
-          <%= image_tag("/images/basho_logo.png", alt: "basho")%>
+          <%= image_tag("/images/vox-media-logo.svg", alt: "Vox Media")%>
         </li>
         <li>
-          <%= image_tag("/images/mailchimp_logo.png", alt: "mailchimp")%>
+          <%= image_tag("/images/mailchimp-logo.svg", alt: "MailChimp")%>
         </li>
         <li>
-          <%= image_tag("/images/thoughtbot_logo.png", alt: "thoughtbot")%>
-        </li>
-        <li>
-          <%= image_tag("/images/funio_logo.png", alt: "funio")%>
+          <%= image_tag("/images/thoughtbot-logo.svg", alt: "thoughtbot")%>
         </li>
       </ul>
-      <ul class="centered-content">
-        <li class="community-social-link-item">
-        <%= link_to t("index.see_middleman_sites"),
-          "#{locale_prefix}/community/built-using-middleman/", class:
-          "community-social-link" %>
-        </li>
-      </ul>
-    </article>
+
+      <%= link_to(
+        t("index.see_middleman_sites"),
+        "#{locale_prefix}/community/built-using-middleman/",
+        class: "community-social-link"
+      ) %>
+    </div>
   </div>
 </section>
