--- a/source/partials/_logos.erb
+++ b/source/partials/_logos.erb
@@ -1,31 +1,30 @@
-<section class="logos">
+<section class="logos"> 
   <div class="wrap-container">
     <h4 class="contributions-title centered-content">
       <%= t("community.built_using_middleman") %>
     </h4>
-
-    <div class="logo-block">
+    <article class="logo-block">
       <ul>
         <li>
-          <%= image_tag("/images/vox-media-logo.svg", alt: "Vox Media")%>
+          <%= image_tag("/images/basho_logo.png", alt: "basho")%>
         </li>
         <li>
-          <%= image_tag("/images/nest-logo.svg", alt: "Nest")%>
+          <%= image_tag("/images/mailchimp_logo.png", alt: "mailchimp")%>
         </li>
         <li>
-          <%= image_tag("/images/mailchimp-logo.svg", alt: "MailChimp")%>
+          <%= image_tag("/images/thoughtbot_logo.png", alt: "thoughtbot")%>
         </li>
         <li>
-          <%= image_tag("/images/thoughtbot-logo.svg", alt: "thoughtbot")%>
+          <%= image_tag("/images/funio_logo.png", alt: "funio")%>
         </li>
       </ul>
-
-      <%= link_to(
-        t("index.see_middleman_sites"),
-        "#{locale_prefix}/community/built_using_middleman/",
-        class: "community-social-link"
-      ) %>
-
-    </div>
+      <ul class="centered-content">
+        <li class="community-social-link-item">
+        <%= link_to t("index.see_middleman_sites"),
+          "#{locale_prefix}/community/built_using_middleman/", class:
+          "community-social-link" %>
+        </li>
+      </ul>
+    </article>
   </div>
 </section>
