Swap underscores for hyphens in URLs (#674)

--- a/source/partials/_documentation_nav.erb
+++ b/source/partials/_documentation_nav.erb
@@ -7,25 +7,25 @@
       <li class="doc-item">
         <%= active_link_to t("navigation.basics.upgrade-v4"), "#{locale_prefix}/basics/upgrade-v4/"%> </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.basics.start_new_site"), "#{locale_prefix}/basics/start_new_site/" %>
+        <%= active_link_to t("navigation.basics.start_new_site"), "#{locale_prefix}/basics/start-new-site/" %>
       </li>
       <li class="doc-item">
         <%= active_link_to t("navigation.basics.directory_structure"), "#{locale_prefix}/basics/directory-structure/" %>
       </li>
       <li class="doc-item" >
-        <%= active_link_to t("navigation.basics.development_cycle"), "#{locale_prefix}/basics/development_cycle/" %>
+        <%= active_link_to t("navigation.basics.development_cycle"), "#{locale_prefix}/basics/development-cycle/" %>
       </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.basics.build_deploy"), "#{locale_prefix}/basics/build_and_deploy/" %>
+        <%= active_link_to t("navigation.basics.build_deploy"), "#{locale_prefix}/basics/build-and-deploy/" %>
         </li>
       <li class="doc-item">
         <%= active_link_to t("navigation.basics.frontmatter"), "#{locale_prefix}/basics/frontmatter/" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.basics.templates"), "#{locale_prefix}/basics/templating_language/" %>
+        <%= active_link_to t("navigation.basics.templates"), "#{locale_prefix}/basics/templating-language/" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.basics.helper_methods"), "#{locale_prefix}/basics/helper_methods/" %>
+        <%= active_link_to t("navigation.basics.helper_methods"), "#{locale_prefix}/basics/helper-methods/" %>
         </li>
       <li class="doc-item">
         <%= active_link_to t("navigation.basics.layouts"), "#{locale_prefix}/basics/layouts/" %>
@@ -48,40 +48,40 @@
         <%= active_link_to t("navigation.advanced.configuration"), "#{locale_prefix}/advanced/configuration/" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.project_templates"), "#{locale_prefix}/advanced/project_templates/" %>
+        <%= active_link_to t("navigation.advanced.project_templates"), "#{locale_prefix}/advanced/project-templates/" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.dynamic_pages"), "#{locale_prefix}/advanced/dynamic_pages/" %>
+        <%= active_link_to t("navigation.advanced.dynamic_pages"), "#{locale_prefix}/advanced/dynamic-pages/" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.data_files"), "#{locale_prefix}/advanced/data_files/" %>
+        <%= active_link_to t("navigation.advanced.data_files"), "#{locale_prefix}/advanced/data-files/" %>
         </li>
       <li class="doc-item">
         <%= active_link_to t("navigation.advanced.localization"), "#{locale_prefix}/advanced/localization/" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.asset_pipeline"), "#{locale_prefix}/advanced/asset_pipeline/" %>
+        <%= active_link_to t("navigation.advanced.asset_pipeline"), "#{locale_prefix}/advanced/asset-pipeline/" %>
         </li>
       <li class="doc-item">
         <%= active_link_to t("navigation.advanced.external_pipeline"), "#{locale_prefix}/advanced/external-pipeline/" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.rack_middleware"), "#{locale_prefix}/advanced/rack_middleware/" %>
+        <%= active_link_to t("navigation.advanced.rack_middleware"), "#{locale_prefix}/advanced/rack-middleware/" %>
         </li>
       <li class="doc-item">
         <%= active_link_to t("navigation.advanced.sitemap"), "#{locale_prefix}/advanced/sitemap/" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.pretty_urls"), "#{locale_prefix}/advanced/pretty_urls/" %>
+        <%= active_link_to t("navigation.advanced.pretty_urls"), "#{locale_prefix}/advanced/pretty-urls/" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.improving_cacheability"), "#{locale_prefix}/advanced/improving_cacheability/" %>
+        <%= active_link_to t("navigation.advanced.improving_cacheability"), "#{locale_prefix}/advanced/improving-cacheability/" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.file_size_optimization"), "#{locale_prefix}/advanced/file_size_optimization/" %>
+        <%= active_link_to t("navigation.advanced.file_size_optimization"), "#{locale_prefix}/advanced/file-size-optimization/" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.advanced.custom_extensions"), "#{locale_prefix}/advanced/custom_extensions/" %>
+        <%= active_link_to t("navigation.advanced.custom_extensions"), "#{locale_prefix}/advanced/custom-extensions/" %>
         </li>
     </ul>
   </div>
@@ -105,7 +105,7 @@
         <%= active_link_to t("navigation.community.github"), "https://github.com/middleman/middleman", target: "_blank" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.community.built_using_middleman"), "#{locale_prefix}/community/built_using_middleman/" %>
+        <%= active_link_to t("navigation.community.built_using_middleman"), "#{locale_prefix}/community/built-using-middleman/" %>
         </li>
     </ul>
   </div>
