Fix undefined Sass variable

--- a/source/stylesheets/base/_forms.scss
+++ b/source/stylesheets/base/_forms.scss
@@ -27,7 +27,7 @@ label {
 }
 
 #{$all-text-inputs} {
-  background-color: $base-background-color;
+  background-color: #fff;
   border: $base-border;
   border-radius: $base-border-radius;
   box-shadow: $form-box-shadow;
