Update to Bourbon v5.0.0
- The `size` mixin now requires a comma between two values.
- The `em` mixin has been removed; replaced instances of this with raw
`em` values.
- Use the new font stack variables.

--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -1,12 +1,6 @@
-// Project Settings
-@include disable-prefix-for-all;
-
 // Typography
-$sans-serif: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
-  "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
-  "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
-  "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
-$monospace-font-family: "Consolas", "monaco", monospace;
+$sans-serif: $font-stack-system;
+$monospace-font-family: $font-stack-consolas;
 
 $base-font-family: $sans-serif;
 $header-font-family: $base-font-family;
