Swap badge for static version number
The badge is an external resource and adds an extra request to the page.
It is also inaccessible because the version number is within a `img`,
where assistive technology cannot access it.

This commit uses the `middleman-data_source` gem to mount remote JSON
as local data from the RubyGems API, which we can pull the latest
version number from.

See: https://github.com/stevenosloan/middleman-data_source

--- a/source/partials/_hero.erb
+++ b/source/partials/_hero.erb
@@ -10,7 +10,13 @@
         <pre class="browser-body">
           <code class="browser-code"><span class="variable">$</span> <span class="identifier">gem install middleman</span></code>
         </pre>
-        <a class="badge" href="https://badge.fury.io/rb/middleman" target="_blank"><img src="https://badge.fury.io/rb/middleman.svg" alt="Gem Version" height="18"></a>
+
+        <%= link_to(
+          "Current version: #{data.gem_info.version}",
+          data.gem_info.project_uri,
+          class: "version-number",
+          target: "_blank"
+        ) %>
       </div>
     </div>
   </section>
