Add alt attribute

--- a/source/localizable/community/index.html.erb
+++ b/source/localizable/community/index.html.erb
@@ -70,7 +70,7 @@
   <div class="wrap-container">
     <div class="forum-item-graphic-wrapper">
       <div class="forum-browser browser">
-        <img src="/images/community-forum.jpg">
+        <img src="/images/community-forum.jpg" alt="Middleman forum">
       </div>
     </div>
     <div class="forum-text-wrapper">
