--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -11,6 +11,7 @@
 @import "mixins/button";
 @import "modules/modules";
 
+@import "components/badge";
 @import "components/container";
 @import "components/site-footer";
 @import "components/site-frame";
