Refactor active_link_to helper
Inject and style off of an `aria-current` attribute instead of a class.

See: http://tink.uk/using-the-aria-current-attribute/

--- a/source/partials/_documentation_nav.erb
+++ b/source/partials/_documentation_nav.erb
@@ -2,7 +2,11 @@
   <h3 class="docs-section-heading"><%= t("navigation.basics.title") %></h3>
   <ul>
     <li class="doc-item">
-      <%= active_link_to t("navigation.basics.install"), "#{locale_prefix}/basics/install/"%> </li>
+      <%= active_link_to(
+        t("navigation.basics.install"),
+        "#{locale_prefix}/basics/install/"
+      ) %>
+    </li>
     <li class="doc-item">
       <%= active_link_to t("navigation.basics.upgrade-v4"), "#{locale_prefix}/basics/upgrade-v4/"%> </li>
     <li class="doc-item">
