--- a/source/partials/_documentation_nav.erb
+++ b/source/partials/_documentation_nav.erb
@@ -5,79 +5,79 @@
 
   <ul>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.basics.install"),
         "#{locale_prefix}/basics/install/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.basics.upgrade-v4"),
         "#{locale_prefix}/basics/upgrade-v4/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.basics.start_new_site"),
         "#{locale_prefix}/basics/start-new-site/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.basics.directory_structure"),
         "#{locale_prefix}/basics/directory-structure/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.basics.development_cycle"),
         "#{locale_prefix}/basics/development-cycle/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.basics.build_deploy"),
         "#{locale_prefix}/basics/build-and-deploy/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.basics.frontmatter"),
         "#{locale_prefix}/basics/frontmatter/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.basics.templates"),
         "#{locale_prefix}/basics/templating-language/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.basics.helper_methods"),
         "#{locale_prefix}/basics/helper-methods/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.basics.layouts"),
         "#{locale_prefix}/basics/layouts/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.basics.partials"),
         "#{locale_prefix}/basics/partials/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.basics.redirects"),
         "#{locale_prefix}/basics/redirects/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.basics.blogging"),
         "#{locale_prefix}/basics/blogging/"
       ) %>
@@ -92,79 +92,79 @@
 
   <ul>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.advanced.configuration"),
         "#{locale_prefix}/advanced/configuration/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.advanced.project_templates"),
         "#{locale_prefix}/advanced/project-templates/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.advanced.dynamic_pages"),
         "#{locale_prefix}/advanced/dynamic-pages/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.advanced.data_files"),
         "#{locale_prefix}/advanced/data-files/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.advanced.localization"),
         "#{locale_prefix}/advanced/localization/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.advanced.asset_pipeline"),
         "#{locale_prefix}/advanced/asset-pipeline/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.advanced.external_pipeline"),
         "#{locale_prefix}/advanced/external-pipeline/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.advanced.rack_middleware"),
         "#{locale_prefix}/advanced/rack-middleware/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.advanced.sitemap"),
         "#{locale_prefix}/advanced/sitemap/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.advanced.pretty_urls"),
         "#{locale_prefix}/advanced/pretty-urls/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.advanced.improving_cacheability"),
         "#{locale_prefix}/advanced/improving-cacheability/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.advanced.file_size_optimization"),
         "#{locale_prefix}/advanced/file-size-optimization/"
       ) %>
     </li>
     <li class="doc-item">
-      <%= active_link_to(
+      <%= current_link_to(
         t("navigation.advanced.custom_extensions"),
         "#{locale_prefix}/advanced/custom-extensions/"
       ) %>
