Move template-engine-options page to the advanced documentation section

--- a/source/partials/_documentation_nav.erb
+++ b/source/partials/_documentation_nav.erb
@@ -169,5 +169,11 @@
         "#{locale_prefix}/advanced/custom-extensions/"
       ) %>
     </li>
+    <li class="doc-item">
+      <%= current_link_to(
+        t("navigation.advanced.template_engine_options"),
+        "#{locale_prefix}/advanced/template-engine-options/"
+      ) %>
+    </li>
   </ul>
 </div>
