Use semantic tags in hero

--- a/source/partials/_hero.erb
+++ b/source/partials/_hero.erb
@@ -2,8 +2,8 @@
   <section class="wrap-container">
     <%= link_to image_tag("middleman-logo.svg"), "#{locale_prefix}/",
       class: "hero-content-logo" %>
-    <h2 class="hero-headline"><%= t("index.headline") %></h2>
-    <h3 class="hero-description"><%= t("index.description") %></h3>
+    <h1 class="hero-headline"><%= t("index.headline") %></h1>
+    <p class="hero-description"><%= t("index.description") %></p>
 
     <div class="hero-banner-container">
       <div class="browser">
