--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -38,7 +38,7 @@ $mm-yellow: #fbc547;
 $mm-navy: #446184;
 $mm-slate-gray: #8990a1;
 $mm-light-gray: #c0c0c0;
-$mm-blue: #4280ca;
+$mm-blue: #3c74b7;
 
 // Font Colors
 $base-font-color: shade($mm-slate-gray, 65%);
